@@ -1,14 +1,18 @@
 package com.frikinjay.mobstacker.config;
 
 import com.frikinjay.almanac.Almanac;
-import com.frikinjay.mobstacker.MobStacker;
 
 import java.io.File;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
+import static com.frikinjay.mobstacker.MobStacker.CONFIG_FILE;
+
 public class MobStackerConfig {
-    private static final File CONFIG_FILE = new File("config/mobstacker.json");
+    private static final int MAX_CAP_VALUE = 128;
+    private static final double MAX_RADIUS = 42000.0;
 
     private boolean killWholeStackOnDeath = false;
     private boolean stackHealth = false;
@@ -17,31 +21,39 @@ public class MobStackerConfig {
     private boolean enableSeparator = false;
     private boolean consumeSeparator = true;
     private String separatorItem = "minecraft:diamond";
-    private List<String> ignoredEntities = new ArrayList<>(List.of("minecraft:ender_dragon"));
-    private List<String> ignoredMods = new ArrayList<>(List.of("corpse"));
+
+    private List<String> ignoredEntities = new ArrayList<>(Arrays.asList(
+            "minecraft:ender_dragon",
+            "minecraft:vex"
+    ));
+    private List<String> ignoredMods = new ArrayList<>(Arrays.asList(
+            "corpse"
+    ));
+
+    private final MobCaps mobCaps = new MobCaps();
 
     public static MobStackerConfig load() {
         return Almanac.loadConfig(CONFIG_FILE, MobStackerConfig.class);
     }
 
     public void save() {
-        if(MobStacker.getStackHealth()) {
-            if(!MobStacker.getKillWholeStackOnDeath()) this.killWholeStackOnDeath = true;
+        if (stackHealth && !killWholeStackOnDeath) {
+            killWholeStackOnDeath = true;
         }
         Almanac.saveConfig(CONFIG_FILE, this);
     }
 
-    public String getSeparatorItem() {
-        return separatorItem;
-    }
+    public String getSeparatorItem() { return separatorItem; }
+    public boolean getConsumeSeparator() { return consumeSeparator; }
+    public boolean getEnableSeparator() { return enableSeparator; }
+    public boolean getKillWholeStackOnDeath() { return killWholeStackOnDeath; }
+    public boolean getStackHealth() { return stackHealth; }
+    public int getMaxMobStackSize() { return maxMobStackSize; }
+    public double getStackRadius() { return stackRadius; }
 
     public void setSeparatorItem(String separatorItem) {
         this.separatorItem = separatorItem;
         save();
-    }
-
-    public boolean getConsumeSeparator() {
-        return consumeSeparator;
     }
 
     public void setConsumeSeparator(boolean consumeSeparator) {
@@ -49,17 +61,9 @@ public class MobStackerConfig {
         save();
     }
 
-    public boolean getEnableSeparator() {
-        return enableSeparator;
-    }
-
     public void setEnableSeparator(boolean enableSeparator) {
         this.enableSeparator = enableSeparator;
         save();
-    }
-
-    public boolean getKillWholeStackOnDeath() {
-        return killWholeStackOnDeath;
     }
 
     public void setKillWholeStackOnDeath(boolean killWholeStackOnDeath) {
@@ -67,17 +71,9 @@ public class MobStackerConfig {
         save();
     }
 
-    public boolean getStackHealth() {
-        return stackHealth;
-    }
-
     public void setStackHealth(boolean stackHealth) {
         this.stackHealth = stackHealth;
         save();
-    }
-
-    public int getMaxMobStackSize() {
-        return maxMobStackSize;
     }
 
     public void setMaxMobStackSize(int maxMobStackSize) {
@@ -85,57 +81,87 @@ public class MobStackerConfig {
         save();
     }
 
-    public double getStackRadius() {
-        return stackRadius;
-    }
-
     public void setStackRadius(double stackRadius) {
-        if (stackRadius > 42000) {
-            stackRadius = 42000;
-        }
-        this.stackRadius = stackRadius;
+        this.stackRadius = Math.min(stackRadius, MAX_RADIUS);
         save();
     }
 
     public List<String> getIgnoredEntities() {
-        return new ArrayList<>(ignoredEntities);
-    }
-
-    public boolean addIgnoredEntity(String entityId) {
-        if (!ignoredEntities.contains(entityId)) {
-            ignoredEntities.add(entityId);
-            save();
-            return true;
-        }
-        return false;
-    }
-
-    public boolean removeIgnoredEntity(String entityId) {
-        if (ignoredEntities.remove(entityId)) {
-            save();
-            return true;
-        }
-        return false;
+        return Collections.unmodifiableList(ignoredEntities);
     }
 
     public List<String> getIgnoredMods() {
-        return new ArrayList<>(ignoredMods);
+        return Collections.unmodifiableList(ignoredMods);
+    }
+
+    public boolean addIgnoredEntity(String entityId) {
+        return addToList(entityId, ignoredEntities);
+    }
+
+    public boolean removeIgnoredEntity(String entityId) {
+        return removeFromList(entityId, ignoredEntities);
     }
 
     public boolean addIgnoredMod(String modId) {
-        if (!ignoredMods.contains(modId)) {
-            ignoredMods.add(modId);
+        return addToList(modId, ignoredMods);
+    }
+
+    public boolean removeIgnoredMod(String modId) {
+        return removeFromList(modId, ignoredMods);
+    }
+
+    private boolean addToList(String item, List<String> list) {
+        if (!list.contains(item)) {
+            list.add(item);
             save();
             return true;
         }
         return false;
     }
 
-    public boolean removeIgnoredMod(String modId) {
-        if (ignoredMods.remove(modId)) {
+    private boolean removeFromList(String item, List<String> list) {
+        if (list.remove(item)) {
             save();
             return true;
         }
         return false;
+    }
+
+    public int getMonsterMobCap() { return mobCaps.monster; }
+    public int getCreatureMobCap() { return mobCaps.creature; }
+    public int getAmbientMobCap() { return mobCaps.ambient; }
+    public int getAxolotlsMobCap() { return mobCaps.axolotls; }
+    public int getUndergroundWaterCreatureMobCap() { return mobCaps.undergroundWaterCreature; }
+    public int getWaterCreatureMobCap() { return mobCaps.waterCreature; }
+    public int getWaterAmbientMobCap() { return mobCaps.waterAmbient; }
+
+    public void setMonsterMobCap(int value) { mobCaps.setMonster(value); save(); }
+    public void setCreatureMobCap(int value) { mobCaps.setCreature(value); save(); }
+    public void setAmbientMobCap(int value) { mobCaps.setAmbient(value); save(); }
+    public void setAxolotlsMobCap(int value) { mobCaps.setAxolotls(value); save(); }
+    public void setUndergroundWaterCreatureMobCap(int value) { mobCaps.setUndergroundWaterCreature(value); save(); }
+    public void setWaterCreatureMobCap(int value) { mobCaps.setWaterCreature(value); save(); }
+    public void setWaterAmbientMobCap(int value) { mobCaps.setWaterAmbient(value); save(); }
+
+    private static class MobCaps {
+        private int monster = 22;
+        private int creature = 5;
+        private int ambient = 7;
+        private int axolotls = 2;
+        private int undergroundWaterCreature = 2;
+        private int waterCreature = 2;
+        private int waterAmbient = 8;
+
+        private void setMonster(int value) { monster = validateCap(value); }
+        private void setCreature(int value) { creature = validateCap(value); }
+        private void setAmbient(int value) { ambient = validateCap(value); }
+        private void setAxolotls(int value) { axolotls = validateCap(value); }
+        private void setUndergroundWaterCreature(int value) { undergroundWaterCreature = validateCap(value); }
+        private void setWaterCreature(int value) { waterCreature = validateCap(value); }
+        private void setWaterAmbient(int value) { waterAmbient = validateCap(value); }
+
+        private static int validateCap(int value) {
+            return Math.min(value, MAX_CAP_VALUE);
+        }
     }
 }
